# cuda-practice

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: cuda.cmake
cmake/module/: prefix-sum.cmake
src/cpp/: main.cpp
src/cpp/module/: prefix-sum.cu  prefix-sum.cuh
